--- a/force-app/main/default/classes/calculator.cls
+++ b/force-app/main/default/classes/calculator.cls
@@ -1,3 +1,8 @@
+/*************************************
+ * Name: Calculator
+ * Auth: Orlando
+ * Date: 14:12:2024
+ ************************************/
 public with sharing class calculator {
     public calculator() {
 
