--- a/force-app/main/default/classes/calculator.cls
+++ b/force-app/main/default/classes/calculator.cls
@@ -1,5 +1,13 @@
+/********************************************************************
+ * Version         Date          Name           Description
+ * ******************************************************************
+ * V1.0           14-02-2024   Developer1     Add method impelmented
+ *******************************************************************/
 public with sharing class calculator {
     public calculator() {
 
+    }
+    public Integer add(Integer a, Integer b){
+        return a+b;
     }
 }
