Added Sub in Calculator

--- a/force-app/main/default/classes/calculator.cls
+++ b/force-app/main/default/classes/calculator.cls
@@ -7,4 +7,7 @@ public with sharing class calculator {
     public calculator() {
 
     }
+    public Integer sub(integer a, integer b){
+        return a-b;
+    }
 }
